<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>powerauth-webflow-parent</name>
    <description>Federated Authentication and Authorization Server for Web</description>

    <groupId>io.getlime.security</groupId>
    <artifactId>powerauth-webflow-parent</artifactId>
    <version>1.4.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.8</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <inceptionYear>2016</inceptionYear>
    <url>http://powerauth.com/</url>

    <organization>
        <name>Wultra s.r.o.</name>
        <url>http://wultra.com</url>
    </organization>

    <licenses>
        <license>
            <name>GNU Affero General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/agpl-3.0.en.html</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Petr Dvorak</name>
            <email>petr@wultra.com</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <name>Roman Strobl</name>
            <email>roman.strobl@wultra.com</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/wultra/powerauth-webflow.git</connection>
        <developerConnection>scm:git:https://github.com/wultra/powerauth-webflow.git
        </developerConnection>
        <url>https://github.com/wultra/powerauth-webflow</url>
    </scm>

    <issueManagement>
        <system>Github</system>
        <url>https://github.com/wultra/powerauth-webflow/issues</url>
    </issueManagement>

    <modules>
        <module>powerauth-data-adapter-client</module>
        <module>powerauth-data-adapter-model</module>
        <module>powerauth-nextstep</module>
        <module>powerauth-nextstep-client</module>
        <module>powerauth-nextstep-model</module>
        <module>powerauth-webflow</module>
        <module>powerauth-webflow-authentication</module>
        <module>powerauth-webflow-authentication-init</module>
        <module>powerauth-webflow-authentication-form</module>
        <module>powerauth-webflow-authentication-login-sca</module>
        <module>powerauth-webflow-authentication-operation-review</module>
        <module>powerauth-webflow-authentication-mtoken</module>
        <module>powerauth-webflow-authentication-sms</module>
        <module>powerauth-webflow-authentication-approval-sca</module>
        <module>powerauth-webflow-authentication-consent</module>
        <module>powerauth-webflow-i18n</module>
        <module>powerauth-webflow-resources</module>
        <module>powerauth-webflow-client</module>
        <module>powerauth-mtoken-model</module>
        <module>powerauth-tpp-engine</module>
        <module>powerauth-tpp-engine-model</module>
        <module>powerauth-tpp-engine-client</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
        <maven-javadoc-plugin.version>3.4.0</maven-javadoc-plugin.version>
        <maven-war-plugin.version>3.3.2</maven-war-plugin.version>
        <jaxb.version>2.3.1</jaxb.version>
        <javax.annotation.version>1.3.2</javax.annotation.version>
        <bc.version>1.70</bc.version>
        <lombok.version>1.18.24</lombok.version>
        <jackson.version>2.13.4</jackson.version>
        <zxing.version>3.5.0</zxing.version>
        <passay.version>1.6.1</passay.version>
        <springdoc-openapi.version>1.6.9</springdoc-openapi.version>
        <guava.version>31.1-jre</guava.version>
        <moneta.version>1.1</moneta.version>
        <owasp-java-html-sanitizer.version>20220608.1</owasp-java-html-sanitizer.version>
        <junit.version>5.8.2</junit.version>
        <spring-context.version>5.3.20</spring-context.version>
        <wultra-java-core.version>1.5.2</wultra-java-core.version>
        <powerauth-java-crypto.version>1.4.0-SNAPSHOT</powerauth-java-crypto.version>
        <powerauth.version>1.4.0-SNAPSHOT</powerauth.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <configuration>
                    <failOnError>false</failOnError>
                    <detectOfflineLinks>false</detectOfflineLinks>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.kohsuke</groupId>
                        <artifactId>pgp-maven-plugin</artifactId>
                        <version>1.1</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>ossrh-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh-snapshots-distribution</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>ossrh-staging-distribution</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

</project>
